--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -193,12 +193,12 @@
 	}
 </script><div id='mvncmd'>
 	<div>
-		<label title='Base Package' for='groupId'>GroupId:</label>
-		<input type='text' id='groupId' onkeyup='changeIt();' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
-		<label title='Project Name' for='artifactId'>ArtifactId:</label> 
-		<input type='text' id='artifactId' onkeyup='changeIt();' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
-		<label title='Wicket Version' for='version'>Version:</label>
-		<select id='version' onchange='changeIt();'>
+		<label for='groupId' title='Base Package'>GroupId:</label>
+		<input value='com.mycompany' id='groupId' type='text' onkeyup='changeIt();' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
+		<input value='myproject' id='artifactId' type='text' onkeyup='changeIt();' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<label for='version' title='Wicket Version'>Version:</label>
+		<select onchange='changeIt();' id='version'>
 
 		
 			<option value='6.0-SNAPSHOT'>6.0-SNAPSHOT</option>
@@ -217,7 +217,7 @@
 		
 
 		
-			<option selected='selected' value='1.5.5'>1.5.5</option>
+			<option value='1.5.5' selected='selected'>1.5.5</option>
 		
 
 		</select><span title='Wicket Version'>&nbsp;(?)</span>
