--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -204,9 +204,9 @@
 </script><div id='mvncmd'>
 	<div>
 		<label for='groupId' title='Base Package'>GroupId:</label>
-		<input id='groupId' onkeyup='changeIt();' type='text' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<input value='com.mycompany' type='text' id='groupId' onkeyup='changeIt();' /><span title='Base Package'>&nbsp;(?)</span><br />
 		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
-		<input id='artifactId' onkeyup='changeIt();' type='text' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<input value='myproject' type='text' id='artifactId' onkeyup='changeIt();' /><span title='Project Name'>&nbsp;(?)</span><br />
 		<label for='version' title='Wicket Version'>Version:</label>
 		<select id='version' onchange='changeIt();'>
 
@@ -231,13 +231,13 @@
 		
 
 		
-			<option selected='selected' value='6.0.0'>6.0.0</option>
+			<option value='6.0.0' selected='selected'>6.0.0</option>
 		
 
 		</select><span title='Wicket Version'>&nbsp;(?)</span>
 	</div>
 	<div>
-		<label for='cmdLine' id='cmdLabel'>Command Line:</label>
+		<label id='cmdLabel' for='cmdLine'>Command Line:</label>
 		<textarea id='cmdLine' onfocus='this.select();'>
 		</textarea>
 		<script>changeIt();</script>
