--- a/start/download.html
+++ b/start/download.html
@@ -234,16 +234,14 @@
     <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
     <span class='nt'>&lt;version&gt;</span>6.6.0<span class='nt'>&lt;/version&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div>
+</code></pre></div>
 <p>For the SLF4J log4j binding:</p>
 <div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
     <span class='nt'>&lt;groupId&gt;</span>org.slf4j<span class='nt'>&lt;/groupId&gt;</span>
     <span class='nt'>&lt;artifactId&gt;</span>slf4j-log4j12<span class='nt'>&lt;/artifactId&gt;</span>
     <span class='nt'>&lt;version&gt;</span>1.6.4<span class='nt'>&lt;/version&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div>
+</code></pre></div>
 <h2 id='snapshots_and_latest_bleedingedge_code'>SNAPSHOTs and latest bleeding-edge code</h2>
 
 <p>If you wish to build the latest code from scratch, master and branches live in Git repository: <a href='https://git-wip-us.apache.org/repos/asf/wicket.git'>https://git-wip-us.apache.org/repos/asf/wicket.git</a></p>
@@ -277,8 +275,7 @@
         <span class='nt'>&lt;layout&gt;</span>default<span class='nt'>&lt;/layout&gt;</span>
     <span class='nt'>&lt;/repository&gt;</span>
 <span class='nt'>&lt;/repositories&gt;</span>
-</code></pre>
-</div>
+</code></pre></div>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
