--- a/start/index.html
+++ b/start/index.html
@@ -173,7 +173,7 @@
 
 <li><a href='download.html'>Download</a> the latest and greatest Wicket release</li>
 
-<li>Or use one of the available third party <a href='http://www.jweekend.com/dev/LegUp' rel='nofollow'>Maven archetypes</a></li>
+<li>Or use one of the available third party <a rel='nofollow' href='http://www.jweekend.com/dev/LegUp'>Maven archetypes</a></li>
 </ul>
 		</div>
         <div id="clearer"></div>
