--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
 
 <p>Wicket is released under the <a href='http://www.apache.org/licenses/LICENSE-2.0.html'>Apache License, Version 2.0</a>.</p>
 
+<h1 id='cve20125636__apache_wicket_xss_vulnerability'><a href='/2013/03/03/cve-2012-5636.html'>CVE-2012-5636 - Apache Wicket XSS vulnerability</a></h1>
+<p>Vendor: The Apache Software Foundation</p><p>Versions Affected: Apache Wicket 1.4.x, 1.5.x and 1.6.x</p><p>Description: It is possible for JavaScript statements to break out of a &#60;script&#62; tag in the rendered response. This might pose a security threat if the written JavaScript contains user provided data.</p><p>This vulnerability is fixed in <a href='https://wicket.apache.org/2012/12/14/wicket-6.4.0-released.html'>Apache Wicket 6.4.0</a>, <a href='https://wicket.apache.org/2013/02/26/wicket-1.5.10-released.html'>Apache Wicket 1.5.10</a> and Apache Wicket 1.4.22.</p><p>Credit: This issue was reported by Michael Riedel.</p>
 <h1 id='wicket_1510_released'><a href='/2013/02/26/wicket-1.5.10-released.html'>Wicket 1.5.10 released</a></h1>
 <p>This is the tenth maintenance release of the Wicket 1.5.x series. This release brings over 28 bug fixes and improvements.</p><ul>
 <li><a href='https://git-wip-us.apache.org/repos/asf/wicket/repo?p=wicket.git;a=shortlog;h=refs/tags/release/wicket-1.5.10'>Git tag</a></li>
@@ -200,87 +202,15 @@
     <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
     <span class='nt'>&lt;version&gt;</span>1.5.10<span class='nt'>&lt;/version&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><ul>
+</code></pre></div><ul>
 <li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.10'>full distribution</a> (including source)</li>
-</ul>
-<h1 id='apache_wicket_660_released'><a href='/2013/02/15/wicket-6.6.0-released.html'>Apache Wicket 6.6.0 released</a></h1>
-<p>The Apache Wicket PMC is proud to announce Apache Wicket 6.6.0!</p><p>This release marks the sixth minor release of Wicket 6. Starting with Wicket 6 we use semantic versioning for the future development of Wicket, and as such no API breaks are present in this release compared to 6.0.0.</p><h3 id='new_and_noteworthy'>New and noteworthy</h3><h4 id='wicketfor_attribute_for_html_label_tags'>wicket:for attribute for html label tags</h4><p>While already available for some time, the wicket-1.5.xsd now contains a valid definition for the <code>wicket:for</code> attribute such that it</p><blockquote>
-<p>Can be used in HTML <code>&lt;label&gt;</code> element to automatically link it to a form element. The value of this attribute must have the same value of the form component&#8217;s wicket:id attribute.</p>
-</blockquote><p>So you can use the following markup:</p><div class='highlight'><pre><code class='html'><span class='nt'>&lt;label</span> <span class='na'>wicket:for=</span><span class='s'>&quot;someinput&quot;</span><span class='nt'>&gt;</span>Some label<span class='nt'>&lt;/label&gt;</span>
-<span class='nt'>&lt;input</span> <span class='na'>wicket:id=</span><span class='s'>&quot;someinput&quot;</span> <span class='na'>type=</span><span class='s'>&quot;text&quot;</span><span class='nt'>&gt;</span>
-</code></pre>
-</div><h4 id='added_a_callback_for_an_invalidated_session'>Added a callback for an invalidated session</h4><p>Session is extended with a life cycle event called <code>onInvalidate()</code>. This method is executed when the user session is invalidated either by explicit call to <code>org.apache.wicket.Session#invalidate()</code> or due to HttpSession expiration.</p><p>In case of session expiration this method is called in a non-worker thread, i.e. there are no thread locals exported for the Application, RequestCycle and Session. The Session is the current instance. The Application can be found by using <code>Application#get(String)</code>. There is no way to get a reference to a RequestCycle.</p><h3 id='using_this_release'>Using this release</h3><p>With Apache Maven update your dependency to (and don&#8217;t forget to update any other dependencies on Wicket projects to the same version):</p><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
-    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
-    <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>6.6.0<span class='nt'>&lt;/version&gt;</span>
-<span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><p>Or download and build the distribution yourself, or use our convenience binary package</p><ul>
-<li>Source: <a href='http://www.apache.org/dyn/closer.cgi/wicket/6.6.0'>http://www.apache.org/dyn/closer.cgi/wicket/6.6.0</a></li>
-
-<li>Binary: <a href='http://www.apache.org/dyn/closer.cgi/wicket/6.6.0/binaries'>http://www.apache.org/dyn/closer.cgi/wicket/6.6.0/binaries</a></li>
-</ul><h3 id='upgrading_from_earlier_versions'>Upgrading from earlier versions</h3><p>If you upgrade from 6.y.z this release is a drop in replacement. If you come from a version prior to 6.0.0, please read our Wicket 6 migration guide found at</p><ul>
-<li><a href='http://s.apache.org/wicket-6.0-migration'>http://s.apache.org/wicket-6.0-migration</a></li>
-</ul><p>Have fun!</p><p>— The Wicket team</p><h3 id='release_notes__wicket__version_660'>Release Notes - Wicket - Version 6.6.0</h3><h4 id='bugs'>Bugs</h4><ul>
-<li><a href='https://issues.apache.org/jira/browse/WICKET-4723'>WICKET-4723</a> - tracking id retrieved in AtmosphereBehavior#onRequest() is always 0</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-4724'>WICKET-4724</a> - the option name &#8220;maxRequests&#8221; is wrong in jquery.wicketatmosphere.js</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-4926'>WICKET-4926</a> - CheckGroupSelector does not work in nested forms in modal windows</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-4984'>WICKET-4984</a> - Update quickstart info for changed workflow in IntelliJ idea</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-4990'>WICKET-4990</a> - Problem using AutoCompleteBehavior with AjaxFormComponentUpdatingBehavior(&#8220;onchange&#8221;)</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-4998'>WICKET-4998</a> - AjaxFormComponentUpdatingBehavior(&#8220;onkeypress&#8221;) is triggered when Enter is used on autocomplete list</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5011'>WICKET-5011</a> - Allow Select to work with non-equals objects</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5013'>WICKET-5013</a> - Wicket Enclosure fails with more than one component</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5014'>WICKET-5014</a> - Changes in WicketObjects.sizeof(final Serializable object) clashes with <code>&lt;header-contribution&gt;</code> in AjaxResponse</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5019'>WICKET-5019</a> - Handling of NO_MINIFIED_NAME in PackageResourceReference#internalGetMinifiedName()</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5020'>WICKET-5020</a> - InlineEnclosureHandler always uses &#8220;wicket&#8221; namespace</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5024'>WICKET-5024</a> - Global ajax event for precondition is not called</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5027'>WICKET-5027</a> - FormTester#getInputValue() does not support Select/SelectOption nor other custom components</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5029'>WICKET-5029</a> - Palette does not allow to turn off localization</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5031'>WICKET-5031</a> - Upgrade bootstrap to 2.3</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5035'>WICKET-5035</a> - script tag with wicket:id does not throw exception if it was not added in the code</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5036'>WICKET-5036</a> - Post Parameters are lost when continueToOriginalDestination() is called</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5040'>WICKET-5040</a> - Session.exists() returns false when ThreadContext#session is not set to current session</li>
-</ul><h4 id='improvement'>Improvement</h4><ul>
-<li><a href='https://issues.apache.org/jira/browse/WICKET-4444'>WICKET-4444</a> - Add a callback to the Session which is called when the HttpSession is invalidated</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-4861'>WICKET-4861</a> - Making MultiFileUploadField use HTML5 multiple attr &amp; remove confusing fakepath</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-4945'>WICKET-4945</a> - Wicket-atmosphere filters should be functions on AtmosphereResource</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-4946'>WICKET-4946</a> - Allow passing parameters to atmosphere JS</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5003'>WICKET-5003</a> - Add wicket:for attribute in wicket.xsd</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5006'>WICKET-5006</a> - Improve null display value in AbstractSingleSelectChoice</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5010'>WICKET-5010</a> - Improve wicket-ajax.js to be able to work with jQuery 1.9+</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5016'>WICKET-5016</a> - Updated Application_el.properties for 6.x</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5017'>WICKET-5017</a> - BaseWicketTester#clickLink() doesn not serialize form to request for SubmitLink but does for AjaxSubmitLink</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5022'>WICKET-5022</a> - Improve Application_es.properties</li>
-
-<li><a href='https://issues.apache.org/jira/browse/WICKET-5025'>WICKET-5025</a> - Set the component as a context to the ajax listeners</li>
 </ul><h1>Older news items</h1><ul>
+
+
+<li>
+        <a href='/2013/02/15/wicket-6.6.0-released.html'>Apache Wicket 6.6.0 released</a> - <span>15 Feb 2013</span><br />
+        The Apache Wicket PMC is proud to announce Apache Wicket 6.6.0! This release marks the sixth minor release of Wicket 6. Starting with Wicket 6...
+        <a href='/2013/02/15/wicket-6.6.0-released.html'>more</a></li>
 
 
 <li>
@@ -335,12 +265,6 @@
         <a href='/2012/09/05/wicket-6.0.0-released.html'>Apache Wicket v6.0.0 released</a> - <span>05 Sep 2012</span><br />
         &#8220;With great pleasure we announce the availability of Apache Wicket 6.0.0&#8221; &#8211; Martijn Dashorst, Vice President, Apache Wicket Apache Wicket v6.0.0 is the 6th major...
         <a href='/2012/09/05/wicket-6.0.0-released.html'>more</a></li>
-
-
-<li>
-        <a href='/2012/09/05/wicket-1.4.21-released.html'>Wicket 1.4.21 released</a> - <span>05 Sep 2012</span><br />
-        This is 21st release of the Wicket 1.4.x series. This is also the last release of the 1.4.x series, rounding up the remaining bugfixes. No...
-        <a href='/2012/09/05/wicket-1.4.21-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
